style.css
body {
    padding: 0;
    margin: 0;
}

.moon_container {
  background-color: black;
  height: 70vh;
}

.moon {
    position: relative;
    height: 100%;
}

.moon img {
    position: absolute;
    height: 100%;
}

.moon .full {
    mask-size: cover;
}

